@@ -1,7 +1,10 @@
 package uk.gov.moj.cpp.results.domain.aggregate.utils;
 
+import static java.util.Collections.emptyList;
+import static java.util.Collections.singletonList;
 import static java.util.Comparator.comparing;
-import static java.util.stream.Collectors.toList;
+import static java.util.Objects.nonNull;
+import static org.apache.commons.collections.CollectionUtils.isNotEmpty;
 import static uk.gov.moj.cpp.results.domain.aggregate.NCESDecisionHelper.isApplicationDenied;
 
 import uk.gov.justice.hearing.courts.OffenceResultsDetails;
@@ -11,22 +14,38 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 public class GobAccountHelper {
 
     public static List<String> getOldGobAccounts(final LinkedList<CorrelationItem> correlationItemList, final UUID accountCorrelationId, final List<UUID> offenceIdList,
                                                  final Map<UUID, List<OffenceResultsDetails>> applicationResultsDetails) {
-        return offenceIdList.stream()
-                .map(offenceId -> getOldGobAccount(correlationItemList, accountCorrelationId, offenceId, applicationResultsDetails))
+
+        correlationItemList.sort(comparing(CorrelationItem::getCreatedTime).reversed());
+        final List<CorrelationItem> oldCorrelationItemsMatchingOffences = offenceIdList.stream()
+                .map(offenceId -> getOldCorrelationItemMatch(correlationItemList, accountCorrelationId, offenceId, applicationResultsDetails))
                 .filter(Objects::nonNull)
                 .distinct()
-                .collect(toList());
+                .toList();
+
+        final boolean isSingleHearing = oldCorrelationItemsMatchingOffences.stream().map(CorrelationItem::getHearingId).filter(Objects::nonNull).distinct().count() == 1;
+        if (isSingleHearing) {
+            return isNotEmpty(oldCorrelationItemsMatchingOffences)
+                    ? singletonList(oldCorrelationItemsMatchingOffences.get(oldCorrelationItemsMatchingOffences.size() - 1).getAccountNumber())
+                    : emptyList();
+        } else {
+            return oldCorrelationItemsMatchingOffences.stream().map(CorrelationItem::getAccountNumber).filter(Objects::nonNull).distinct().toList();
+        }
     }
 
     public static String getOldGobAccount(final LinkedList<CorrelationItem> correlationItemList, final UUID accountCorrelationId, final UUID offenceId,
                                           final Map<UUID, List<OffenceResultsDetails>> applicationResultsDetails) {
         correlationItemList.sort(comparing(CorrelationItem::getCreatedTime).reversed());
+        final CorrelationItem oldCorrelationItemMatch = getOldCorrelationItemMatch(correlationItemList, accountCorrelationId, offenceId, applicationResultsDetails);
+        return nonNull(oldCorrelationItemMatch) ? oldCorrelationItemMatch.getAccountNumber() : null;
+    }
+
+    private static CorrelationItem getOldCorrelationItemMatch(final LinkedList<CorrelationItem> correlationItemList, final UUID accountCorrelationId, final UUID offenceId,
+                                                              final Map<UUID, List<OffenceResultsDetails>> applicationResultsDetails) {
 
         //find previous matching correlationItem by offenceId; then ensure the offence isFinancial to return valid GobAccountNumber
         return correlationItemList.stream()
@@ -45,7 +64,7 @@ public class GobAccountHelper {
                             .filter(o -> o.getOffenceId().equals(offenceId))
                             .findFirst()
                             .filter(offenceResultsMatch -> Boolean.TRUE.equals(offenceResultsMatch.getIsFinancial())).isPresent()) {
-                        return correlationItem.getAccountNumber();
+                        return correlationItem;
                     }
                     return null;
                 }).orElse(null);
